[package]
name = "oxideav-format-all"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-format-all"
homepage = "https://github.com/OxideAV/oxideav-format-all"
authors = ["Mark Karpeles"]
description = "Virtual aggregator for oxideav — depends on every sibling codec/container/filter/source crate so they self-register into oxideav_core::REGISTRARS via linkme; consumers call oxideav_core::RuntimeContext::with_all_features() to materialise everything"
readme = "README.md"
keywords = ["oxideav", "multimedia", "aggregator", "virtual", "all"]
categories = ["multimedia"]

# This crate ships no source — `src/lib.rs` is empty. Its sole purpose
# is to declare dependencies on every oxideav sibling crate so that
# linking it pulls them all into the binary, which in turn populates
# `oxideav_core::REGISTRARS` via the linkme distributed slice each
# sibling deposits an entry into.
#
# Consumers depend on this crate when they want "every codec / container
# / filter / source the framework knows about" with one line in their
# Cargo.toml. Slimmer setups should pick individual sibling crates
# instead.

[dependencies]
# Re-exported for the slice-walker test below; not strictly needed by
# the aggregator role since each sibling crate already pulls oxideav-core
# in transitively.
oxideav-core = "0.1"

# Codec crates (audio).
oxideav-aac = "0.1"
oxideav-ac3 = "0.0"
oxideav-ac4 = "0.0"
oxideav-adpcm = "0.0"
oxideav-celt = "0.1"
oxideav-flac = "0.0"
oxideav-g711 = "0.0"
oxideav-g722 = "0.0"
oxideav-g7231 = "0.0"
oxideav-g728 = "0.0"
oxideav-g729 = "0.0"
oxideav-gsm = "0.0"
oxideav-ilbc = "0.0"
oxideav-mp1 = "0.0"
oxideav-mp2 = "0.0"
oxideav-mp3 = "0.1"
oxideav-opus = "0.0"
oxideav-speex = "0.0"
oxideav-vorbis = "0.0"

# Codec crates (video).
oxideav-amv = "0.0"
oxideav-av1 = "0.1"
oxideav-dirac = "0.0"
oxideav-ffv1 = "0.0"
oxideav-h261 = "0.0"
oxideav-h263 = "0.0"
oxideav-h264 = "0.1"
oxideav-h265 = "0.0"
oxideav-h266 = "0.0"
oxideav-mjpeg = "0.1"
oxideav-mpeg12video = "0.0"
oxideav-mpeg4video = "0.1"
oxideav-msmpeg4 = "0.0"
oxideav-prores = "0.0"
oxideav-theora = "0.0"
oxideav-vp6 = "0.0"
oxideav-vp8 = "0.1"
oxideav-vp9 = "0.0"

# Codec crates (image / scene).
oxideav-avif = "0.0"
oxideav-dds = "0.0"
oxideav-gif = "0.0"
oxideav-icer = "0.0"
oxideav-jpeg2000 = "0.0"
oxideav-jpegxl = "0.0"
oxideav-jpegxs = "0.0"
oxideav-openexr = "0.0"
oxideav-pbm = "0.0"
oxideav-pdf = "0.1"
oxideav-pict = "0.0"
oxideav-png = "0.1"
oxideav-qoi = "0.1"
oxideav-svg = "0.1"
oxideav-webp = "0.1"

# Container crates.
oxideav-avi = "0.0"
oxideav-basic = "0.0"
oxideav-flv = "0.0"
oxideav-iff = "0.0"
oxideav-mkv = "0.0"
oxideav-mod = "0.0"
oxideav-mp4 = "0.0"
oxideav-ogg = "0.1"
oxideav-s3m = "0.0"

# Subtitle crates.
oxideav-ass = "0.0"
oxideav-sub-image = "0.0"
oxideav-subtitle = "0.1"

# Filter / generator / source crates.
oxideav-audio-filter = "0.1"
oxideav-generator = "0.1"
oxideav-http = "0.0"
oxideav-image-filter = "0.1"
oxideav-source = "0.1"

# Hardware-accelerated codec crates (registered with priority 0;
# preferred over the pure-Rust impls on macOS, no-op on other targets
# since the crates are `#![cfg(target_os = "macos")]`).
oxideav-audiotoolbox = "0.0"
oxideav-videotoolbox = "0.0"
